--- a/HTML/problem06/solution/solution.html
+++ b/HTML/problem06/solution/solution.html
@@ -17,9 +17,7 @@
     <img src="../imgs/languages.png" />
     <p>
       There are ~250 popular programming languages based on
-      <a href="https://www.tiobe.com/tiobe-index/" target="_blank"
-        >the TIOBE index</a
-      >
+      <a href="https://www.tiobe.com/tiobe-index/" target="_blank">the TIOBE index</a>
     </p>
   </body>
 </html>
